# exemplify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
dittoed/: __init__.py  cli.py  main.py
dittoed/installables/: base.py  command.py  distro.py  link.py  node.py  python.py  rust.py  vcs.py
dittoed/steps/: base.py  command.py  distro.py  link.py  node.py  python.py  rust.py  vcs.py
exemplify/: __init__.py  cli.py  console.py  main.py
exemplify/steps/: base.py  command.py  distro.py  python.py  vcs.py
exemplify/steps/package/distro/: apt.py  dnf.py
exemplify/steps/package/node/: npm.py
exemplify/steps/package/python/: pip.py  pipx.py
exemplify/steps/package/rust/: cargo.py
exemplify/steps/shell/: command.py  link.py
exemplify/steps/vcs/: base.py  git.py  hg.py
exemplify/util/: process.py
src/exemplify/: exceptions.py  main.py
src/exemplify/steps/: base.py
src/exemplify/steps/package/distro/: dnf.py
src/exemplify/steps/package/node/: npm.py
src/exemplify/steps/package/python/: pip.py
src/exemplify/steps/package/rust/: cargo.py
src/exemplify/steps/shell/: command.py  link.py
src/exemplify/steps/vcs/: git.py
src/exemplify/util/: process.py  python_path.py
test/: conftest.py  test_cli.py  test_installables_apt.py  test_installables_command.py  test_installables_dnf.py  test_integration.py  test_main.py  test_steps_apt.py  test_steps_command.py  test_steps_dnf.py  test_util_process.py
test/data/: fail.toml  pass.toml
wellington/: __init__.py  cli.py  main.py
wellington/installables/: base.py  command.py  distro.py  link.py  node.py  python.py  rust.py  vcs.py
wellington/util/: merge.py  python_path.py
