[tool.poetry]
name = "exemplify"
version = "0.5.0"
description = "A tool to make your projects and environments exemplary."
readme = "README.md"
repository = "https://github.com/ahal/exemplify"
authors = ["Andrew Halberstadt <ahal@pm.me>"]
license = "MPL-2.0"

[tool.poetry.scripts]
exemplify = 'exemplify.cli:run'

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.358"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
