[project]
name = "exemplify"
version = "0.5.0"
description = "A tool to make your projects and environments exemplary."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrew Halberstadt", email = "ahal@pm.me"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Installation/Setup",
]
dependencies = [
  "tomli >=1.2.2,<2",
  "rich >=13.7.1,<14",
]

[project.urls]
Repository = "https://github.com/ahal/exemplify"
Issues = "https://github.com/ahal/exemplify/issues"

[project.scripts]
exemplify = 'exemplify.cli:run'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pyright >=1.1.358,<2",
  "pytest >=8.1.1,<9",
  "pytest-mock >=3.14.0,<4",
  "pytest-cov >=5.0.0,<6",
]

[tool.pyright]
include = ["src"]
